# baize-template

./: README.md
app/: .rustfmt.toml  Cargo.toml  Makefile  cargo-generate.toml
app/app/: Cargo.toml  build.rs
app/app/src/: main.rs
crates/: cargo-generate.toml
crates/{{project-name}}-core/: Cargo.toml  build.rs
crates/{{project-name}}-core/src/setup/: mod.rs
crates/{{project-name}}-migrate/: Cargo.toml
crates/{{project-name}}-migrate/src/: lib.rs  m20250101_000000_init_table.rs
crates/{{project-name}}-migrate/src/iden/: account.rs
crates/{{project-name}}-sdk/: Cargo.toml
crates/{{project-name}}-sdk/src/: error.rs
db/: cargo-generate.toml  {{entity}}.rs
domain/: cargo-generate.toml
domain/{{entity}}/: repository.rs
service-core/: cargo-generate.toml
service-core/{{entity}}/: http.rs  svc.rs
service-sdk/: cargo-generate.toml  {{entity}}.rs
