[package]
name = "app"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
build = "build.rs"

[dependencies]
baizekit = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }


[build-dependencies]
baizekit = { workspace = true, features = ["version"] }
