[package]
name = "{{project-name}}-migrate"
authors = ["{{authors}}"]
version.workspace = true
edition.workspace = true

[dependencies]
baizekit = { workspace = true, features = ["db-migration"] }
sea-orm-migration = { workspace = true, features = ["runtime-tokio-rustls", "sqlx-postgres"] }
tokio = { workspace = true, features = ["full"] }